--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a-assets>
         <video
           id="video1"
-          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2F0630.mp4?alt=media&token=893077a6-859d-4724-961d-ec0120a393d8"
+          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2FIMG_2642.MOV?alt=media&token=32a8e3c4-1c2c-4b2c-a178-352ae0d07ccb"
           autoplay
           loop
           muted
