--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <a-assets>
         <video
           id="video1"
-          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2FIMG_2642.MOV?alt=media&token=32a8e3c4-1c2c-4b2c-a178-352ae0d07ccb"
+          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2F%E4%B8%8A%E6%B5%B7%E7%AF%87.mp4?alt=media&token=aa6734f0-b54f-44ea-9aaf-9e6e671e07b5"
           autoplay
           loop
           muted
