--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         ></video>
         <video
           id="video2"
-          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2FIMG_2642.MOV?alt=media&token=32a8e3c4-1c2c-4b2c-a178-352ae0d07ccb"
+          src="https://firebasestorage.googleapis.com/v0/b/ar-photo-scanner.firebasestorage.app/o/uploads%2Fvideos%2F%E5%93%88%E5%B0%94%E6%BB%A8%E4%B8%AD%E5%A4%AE%E5%A4%A7%E8%A1%97%E7%AF%87.mp4?alt=media&token=85a2ab85-6f6a-4b3c-beb9-4bfa07c5e0fa"
           autoplay
           loop
           muted
@@ -68,8 +68,8 @@
 
       <a-entity mindar-image-target="targetIndex: 1" id="target-1">
         <a-plane
-          width="0.5625"
-          height="1"
+          width="1"
+          height="1.3333"
           position="0 0 0"
           rotation="0 0 0"
           material="shader: flat; src: #video2"
